<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.github.fishlikewater</groupId>
    <artifactId>raiden-utils</artifactId>
    <version>${revision}</version>

    <packaging>pom</packaging>
    <name>raiden-utils</name>

    <modules>
        <module>raiden-dependency</module>
        <module>raiden-parent</module>
        <module>raiden-bom</module>
    </modules>

    <properties>
        <revision>1.0-SNAPSHOT</revision>
        <lombok.version>1.18.30</lombok.version>
        <maven.compiler.source>21</maven.compiler.source>
        <maven.compiler.target>21</maven.compiler.target>
        <maven.compiler.release>21</maven.compiler.release>
        <flatten-maven-plugin.version>1.6.0</flatten-maven-plugin.version>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <main.user.dir>${user.dir}</main.user.dir>
        <project.root.directory>${project.basedir}</project.root.directory>
        <deployment.repository.relative.path>maven-repository/repository</deployment.repository.relative.path>
        <maven-compiler.version>3.12.1</maven-compiler.version>
        <maven-source.verion>3.3.0</maven-source.verion>
        <maven-deploy.version>3.1.2</maven-deploy.version>
        <license-maven.version>3.0</license-maven.version>
        <maven.build.timestamp.format>yyyy</maven.build.timestamp.format>
        <therapi-runtime-javadoc.version>0.15.0</therapi-runtime-javadoc.version>
        <openapi.version>2.5.0</openapi.version>
        <knife4j-openapi3.version>4.5.0</knife4j-openapi3.version>
        <mapstruct.version>1.5.5.Final</mapstruct.version>
    </properties>

    <url>https://github.com/fishlikewater/raiden-utils</url>

    <licenses>
        <license>
            <name>The Apache Software License, Version 2.0</name>
            <url>https://github.com/fishlikewater/raiden-utils/blob/master/LICENSE</url>
        </license>
    </licenses>

    <scm>
        <url>https://github.com/fishlikewater/raiden-utils</url>
        <connection>https://github.com/fishlikewater/raiden-utils.git</connection>
    </scm>

    <issueManagement>
        <system>GitHub Issues</system>
        <url>https://github.com/fishlikewater/raiden-utils/issues</url>
    </issueManagement>

    <developers>
        <developer>
            <name>fish</name>
            <email>fishlikewater@126.com</email>
        </developer>
    </developers>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>${maven-compiler.version}</version>
                <configuration>
                    <source>${maven.compiler.source}</source>
                    <target>${maven.compiler.target}</target>
                    <release>${maven.compiler.release}</release>
                    <encoding>${project.build.sourceEncoding}</encoding>
                    <compilerArgs>
                        <arg>--enable-preview</arg>
                    </compilerArgs>
                    <annotationProcessorPaths>
                        <!--<path>
                            <groupId>com.github.therapi</groupId>
                            <artifactId>therapi-runtime-javadoc-scribe</artifactId>
                            <version>${therapi-runtime-javadoc.version}</version>
                        </path>-->
                        <path>
                            <groupId>org.projectlombok</groupId>
                            <artifactId>lombok</artifactId>
                            <version>${lombok.version}</version>
                        </path>
                        <path>
                            <groupId>org.mapstruct</groupId>
                            <artifactId>mapstruct-processor</artifactId>
                            <version>${mapstruct.version}</version>
                        </path>
                    </annotationProcessorPaths>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-source-plugin</artifactId>
                <version>${maven-source.verion}</version>
                <configuration>
                    <attach>true</attach>
                </configuration>
                <executions>
                    <execution>
                        <phase>compile</phase>
                        <goals>
                            <goal>jar-no-fork</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>flatten-maven-plugin</artifactId>
                <version>${flatten-maven-plugin.version}</version>
                <configuration>
                    <updatePomFile>true</updatePomFile>
                    <flattenMode>resolveCiFriendliesOnly</flattenMode>
                    <pomElements>
                        <parent>expand</parent>
                        <distributionManagement>remove</distributionManagement>
                        <repositories>remove</repositories>
                    </pomElements>
                </configuration>
                <executions>
                    <!-- enable flattening -->
                    <execution>
                        <id>flatten</id>
                        <phase>process-resources</phase>
                        <goals>
                            <goal>flatten</goal>
                        </goals>
                    </execution>
                    <!-- ensure proper cleanup -->
                    <execution>
                        <id>flatten.clean</id>
                        <phase>clean</phase>
                        <goals>
                            <goal>clean</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>com.mycila</groupId>
                <artifactId>license-maven-plugin</artifactId>
                <version>${license-maven.version}</version>
                <executions>
                    <execution>
                        <phase>generate-sources</phase>
                        <goals>
                            <goal>remove</goal>
                            <goal>format</goal>
                        </goals>
                    </execution>
                </executions>
                <configuration>
                    <properties>
                        <year>${maven.build.timestamp}</year>
                        <author>zhangxiang</author>
                        <email>fishlikewater@126.com</email>
                    </properties>
                    <!-- <inlineHeader>
                     </inlineHeader>-->
                    <quiet>true</quiet>
                    <!--HEADER文件-->
                    <header>${main.user.dir}/HEADER</header>
                    <!--排除文件-->
                    <excludes>
                        <exclude>**/resources/**</exclude>
                        <exclude>**/*.properties</exclude>
                        <exclude>**/*.yml</exclude>
                        <exclude>*.sh</exclude>
                        <exclude>*.yml</exclude>
                        <exclude>.editorconfig</exclude>
                        <exclude>.gitignore</exclude>
                        <exclude>**/*.md</exclude>
                        <exclude>**/*.xml</exclude>
                        <exclude>**/raiden/core/Assert.java</exclude>
                        <exclude>**/references/**/**.java</exclude>
                    </excludes>
                    <!--严格检查-->
                    <strictCheck>true</strictCheck>
                    <mapping>
                        <java>SLASHSTAR_STYLE</java>
                    </mapping>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-deploy-plugin</artifactId>
                <version>${maven-deploy.version}</version>
                <configuration>
                    <!--指定打包的目录 -->
                    <altDeploymentRepository>
                        internal.repo::default::file://${main.user.dir}/${deployment.repository.relative.path}
                    </altDeploymentRepository>
                </configuration>
            </plugin>
        </plugins>
    </build>
</project>
